# VSTD

./: CMakeLists.txt  CMakePresets.json  README.md  TODO  TODO.md  main.c
Utils/: CMakeLists.txt  SharedLibrary.c  SharedLibrary.h  block.c  block.h  cnew.h  cstring.c  cstring.h  filesystem.c  filesystem.h  ht.h  slib.c  slib.h  stack.c  stack.h  str.c  str.h  string_t.c  string_t.h  stringex.c  stringex.h  varray.h  vblock.h  vchain.c  vchain.h  vconsole.c  vconsole.h  vdef.h  vfs.c  vfs.h  vinput_types.h  vnew.h  vslib.c  vslib.h  vstack.c  vstack.h  vstr.c  vstr.h  vstring.c  vstring.h  (+3 more)
Utils/inc/: cstring.h
Utils/src/: v.c
test/: array_test.c  console.c  logger_test.c  main.c  main0.c  main0.cpp  other.c  stack_test.c  threads.c  varr.c  vconsole.c  vec_test.c  vector_test.c  vll.c  vvec.c  vvector.c  vvector.h
test/Utils/: array.decl.h  array.def.h
vstd/: CMakeLists.txt  defines.h  logger.c  logger.h  stringex.c  stringex.h  vblock.c  vdef.h  vfs.c  vfs.h  vinput_types.h  vll.c  vll.h  vlogger.c  vsk.h  vslib.c  vslib.h  vstr.c  vtypes.h  vvec.c  vvec.h
vstd/console/: vlogger.c  vlogger.h  vterm.c  vterm.h
vstd/containers/: darray.c  darray.h  freelist.c  freelist.h  hashtable.c  hashtable.h  queue.c  registry.c  registry.h  ring_queue.c  ring_queue.h  stack.c  stack.h  stringex.c  varr.h  vsk.c  vstr.h  vvec.c
vstd/debug/: vassert.h
vstd/defines/: vdef.h  vtypes.h
vstd/files/: vfs.c
vstd/identifiers/: identifier.h  uuid.c  uuid.h  vhandle.c  vhandle.h
vstd/math/: geometry.c  geometry.h  geometry_2d.h  geometry_3d.c  geometry_3d.h  math_types.h  mtwister.h  vmath.c  vmath.h
vstd/memory/: vmemory.c  vmemory.h
vstd/memory/allocators/: dynamic_allocator.c  dynamic_allocator.h  linear_allocator.c  linear_allocator.h
vstd/platform/: filesystem.c  filesystem.h  platform.h  platform_linux.c  platform_macos.m  platform_nix.c  platform_win32.c
vstd/strings/: vstring.c  vstring.h
vstd/threads/: threadpool.c  threadpool.h  vmutex.h  vsemaphore.h  vthread.h  worker_thread.c  worker_thread.h
vstd/time/: vclock.c  vclock.h
